More CSS practice + fixes Fixed lists that should be <ol> Added links to home and other pages from recipe pages Fixed margins on body so nothing gets cut off

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ p {
     
 }
 
+.center{
+
+    text-align: center;
+}
 
 .indexlist {
     width: 20%;
@@ -16,33 +20,52 @@ p {
     
 }
 
+.indexlist.bottomlinks {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+   
+    
+
+} 
+
+a {
+    border: 5px solid;
+    padding: 10px;
+    margin: 5px;
+    display: inline-block;
+
+}
+
 h1 {
     text-align: center;
     border: 4px solid ;
     padding: 5%;
     margin-left: 20%;
     margin-right: 20%;
+    border-radius: 50px;
+    
 }
 
 img {
     display: block;
-    text-align: center;
     border: 15px red;
-    width: 25%;
-    height: 25%;
+    width: auto;
+    height: 200px;
     margin-left: auto;
     margin-right: auto;
+    border-width: 200px;
 
 }
 
 body {
 background-image: linear-gradient(gray, lightblue);
-
-
-
+width: 800px;
+margin: auto;
 }
 
-* {
-    
 
+
+a:hover {
+    background-color: blanchedalmond;
 }
